changed PositionInfo and SourceView (+ related classes) to work with URIs instead of mixed Strings/Files (more robust, more features e.g. show network files in SourceView)